--- a/projetoceuazul-main/css/estilo.css
+++ b/projetoceuazul-main/css/estilo.css
@@ -17,3 +17,25 @@
     /* fontes */
     
 }
+body
+{
+    background-image: url(../midia/img/ceubackground.webp);
+}
+
+main
+{
+    background-color: var(--cor00);
+}
+
+article
+{
+    background-color: var(--cor01);
+    font-size: 13px;
+    width: 50%;
+    margin-bottom: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 10%;
+    
+   
+}
