--- a/projetoceuazul-main/css/estilo.css
+++ b/projetoceuazul-main/css/estilo.css
@@ -41,7 +41,7 @@ header {
     min-width: 320px;
     max-height: 180px;
     min-height: 70px;
-    background: var(--cor07) url(../midia/img/ceudouradobanner.webp) top center fixed;
+    background: var(--cor07) url(../midia/img/ceudouradobanner.webp) top center;
     margin: auto;
     z-index: 2;
     border: 1px solid black;
@@ -57,9 +57,8 @@ header a {
 }
 
 img#logo {
-    display: block;
-    object-fit: cover;
-    width: 250px;
+    max-width: 280px;
+    min-width: 100px;
     margin-inline: 1vw;
 }
 
@@ -96,14 +95,8 @@ ul#nav-list {
 }
 
 body {
-    background-color: var(--cor02);
-
-    background-image: url(../midia/img/ceuback.jpg); 
-    background-position: center center;
-    background-repeat: no-repeat;
+    background: var(--cor02) url(../midia/img/ceuback.jpg) center center no-repeat fixed;
     background-size: cover;
-    background-attachment: fixed;
-    height: 92%;
     padding-inline: 30px;
 }
 
@@ -123,7 +116,7 @@ main {
 }
 
 section.quadradoazul {
-    background-color: var(--cor01);
+    background-image: linear-gradient();
     max-width: 850px;
     min-width: 320px;
     margin: auto;
@@ -132,13 +125,63 @@ section.quadradoazul {
     border-bottom-right-radius: 10px;
 }
 
+.titulo {
+    text-align: center;
+    color: var(--cor00);
+    background-color: var(--cor09);
+    background-size: 10px;
+    margin-bottom: 30px;
+    font-size: 7vw;
+    font-style: italic;
+}
 
-article {
+.quadradinho {
     background-color: var(--cor02);
-    font-size: 2vw;
     min-width: 120px;
-    max-width: 500px;
+    max-width: 600px;
     margin: auto;
     margin-bottom: 20px;
     padding: 70px
+}
+
+div#hamburger {
+    cursor: pointer;
+    background-color: var(--cor02);
+    max-height: 54px;
+    margin: 5vh;
+    border-radius: 10px;
+    display: none;
+    
+}
+
+div#hamburger div {
+   width: 32px;
+   height: 4px;
+   background-color: var(--cor00);
+   margin: 9px;
+}
+
+div#hamburger:hover {
+    background-color: var(--cor08);
+}
+
+@media (max-width: 860px) {
+    body {
+        overflow-x: hidden;
+    }
+    #nav-list a {
+        font-size: 5em;
+    }
+    #nav-list {
+        position: absolute;
+        top: 8vh;
+        right: 0;
+        width: 100vw;
+        height: 80vh;
+        margin-bottom: 8vh;
+        background-color: var(--cor02);
+        flex-direction: column;
+        justify-content: space-around;
+        transform: translateX(0%);
+    }
 }
